--- a/desafio06/index.html
+++ b/desafio06/index.html
@@ -15,7 +15,7 @@
         <li><abbr title="Use a tag &lt;abbr&gt;">Abreviações</abbr></li>
         <li><abbr title="Use a tag &lt;code&gt;">Códigos-fonte</abbr></li>
         <li><abbr title="Use as tags &lt;ol&gt; e &lt;li&gt;">Listas numeradas</abbr></li>
-        <li><abbr title="Use as tags &lt;ul&gt; e &lt;li&gt;">Listas com demarcadores.</abbr></li>
+        <li><abbr title="Use as tags &lt;ul&gt; e &lt;li&gt;">Listas com demarcadores</abbr></li>
     </ul>
 </body>
 </html>
