--- a/desafio010/android.html
+++ b/desafio010/android.html
@@ -60,8 +60,7 @@
             
             <img src="./imagens/bugdroid.png" class="pequena" alt="Ícone do Budgroid">
 
-            <p>A principal inspiração para os traços do novo <strong>Bugdroid</strong> veio daqueles bonequinhos que ilustram 
-            portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando
+            <p>A principal inspiração para os traços do novo <strong>Bugdroid</strong> veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando
             em sua mesa no escritório do <strong>Google</strong> e olhou para o lado dos banheiros e a identificação foi imediata: simples, 
             limpo, objetivo.</p>
             
