--- a/ex022/fundo005.html
+++ b/ex022/fundo005.html
@@ -8,7 +8,7 @@
 <style>
     body {
        height: 97vh;
-       background-image: url('./imagens/wallpaper003.jpg');
+       background-image: url(./imagens/wallpaper003.jpg);
        background-position: left center;
    }
 </style>
