--- a/ex022/fundo005.html
+++ b/ex022/fundo005.html
@@ -8,7 +8,7 @@
 <style>
     body {
        height: 100vh;
-       background-image: url('./imagens/wallpaper002.jpg)';
+       background-image: url('./imagens/wallpaper002.jpg');
        background-position: left center;
    }
 </style>
