--- a/ex022/fundo006.html
+++ b/ex022/fundo006.html
@@ -8,10 +8,7 @@
 <style>
     body {
         height: 98vh;
-        border: 2px dashed black;
-        background-image: url('https://gustavoguanabara.github.io/html-css/imagens/mascote.png');
-        background-size: 200px;
-        background-repeat: no-repeat;
+        background-image: url('./imagens/wallpaper003.jpg');
         background-position: center left;
     }
 </style>
