--- a/ex022/fundo007.html
+++ b/ex022/fundo007.html
@@ -5,30 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-    <style>
-        body {
-            height: 100vh;
-            background-color: black;
-            background-image: url('imagens/wallpaper002.jpg');
-            background-position: center top;
-            background-repeat: no-repeat;
-            background-size: cover;
+<style>
+    body {
+        height: 100vh;
+        background-color: black;
+        background-image: url(imagens/wallpaper002.jpg);
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
         }
 
         main {
-            background-color: white;
-            width: 400px;
-            padding: 10px;
-            margin: auto;
-            border: 1px solid rgba(60, 60, 189, 0.833);
-            border-radius: 15px;
-
-        }
-    </style>
+           background-color: white;
+           width: 400px;
+           padding: 10px;
+           margin: auto;
+           border: 1px solid darkblue;
+           border-radius: 10px;
+       }
+   </style>
+</head>
 <body>
-    <main>
-        <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis modi, consequatur provident expedita dolorum debitis ducimus molestias quod soluta facilis, laborum, ab quas cumque odit optio tempore omnis quidem. Recusandae! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae vel commodi assumenda ratione maxime voluptas eaque odit animi obcaecati nobis voluptatem, quidem minima accusantium libero aliquam porro! Quod, corrupti unde! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur, quae. Quae illo, reprehenderit deleniti ipsum eius architecto. Nobis esse assumenda non, placeat laborum laudantium quibusdam nemo quos asperiores. Id, ducimus.</p>
-    </main>
+   <main>
+       <h1>Teste de Imagem de Fundo</h1>
+       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque, iste in tempore delectus facilis voluptates dolore sunt voluptas deserunt veniam distinctio voluptatum. Quam doloremque, mollitia accusamus rerum voluptas consequuntur incidunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis magnam nemo, dolorum, dolores perspiciatis incidunt aliquam minus facilis iusto illum qui vel iure delectus praesentium possimus voluptate voluptatibus culpa magni! Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti qui vel esse nulla impedit earum molestiae, placeat sed eum suscipit eligendi adipisci beatae reprehenderit ratione delectus repellat dolorem ipsam ea.</p>
+   </main>
 </body>
 </html>
