--- a/ex022/fundo007.html
+++ b/ex022/fundo007.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixo de Tela</title>
 </head>
 <style>
     body {
         height: 100vh;
         background-color: black;
-        background-image: url(imagens/wallpaper002.jpg);
+        background-image: url('imagens/wallpaper002.jpg');
         background-position: center center;
         background-repeat: no-repeat;
         background-size: cover;
+        background-attachment: fixed;
         }
 
         main {
@@ -28,7 +29,13 @@
 <body>
    <main>
        <h1>Teste de Imagem de Fundo</h1>
-       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque, iste in tempore delectus facilis voluptates dolore sunt voluptas deserunt veniam distinctio voluptatum. Quam doloremque, mollitia accusamus rerum voluptas consequuntur incidunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis magnam nemo, dolorum, dolores perspiciatis incidunt aliquam minus facilis iusto illum qui vel iure delectus praesentium possimus voluptate voluptatibus culpa magni! Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti qui vel esse nulla impedit earum molestiae, placeat sed eum suscipit eligendi adipisci beatae reprehenderit ratione delectus repellat dolorem ipsam ea.</p>
+       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque, iste in tempore delectus facilis voluptates dolore sunt voluptas deserunt veniam distinctio voluptatum. Quam doloremque, mollitia accusamus rerum voluptas consequuntur incidunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis magnam nemo, dolorum, dolores perspiciatis incidunt aliquam minus facilis iusto illum qui vel iure delectus praesentium possimus voluptate voluptatibus culpa magni! Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti qui vel esse nulla impedit earum molestiae, placeat sed eum suscipit eligendi adipisci beatae reprehenderit ratione delectus repellat dolorem ipsam ea. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit alias architecto, voluptatibus praesentium, tenetur cumque neque iure, illo blanditiis qui facilis cum eligendi? Odio et quisquam, architecto ut eum quo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus, rerum, porro et placeat amet deleniti harum sapiente atque laboriosam quis accusamus eos assumenda sequi voluptates voluptatum eius, facere quo ad.</p>
+
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam blanditiis aspernatur suscipit accusantium repudiandae voluptatem atque nesciunt aut officia amet dolore temporibus assumenda molestiae vero quia, dolorem ipsam minus fugit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti fugiat dicta aperiam inventore, similique est harum voluptatum accusantium id provident, ad, voluptas omnis magni. Sapiente porro recusandae libero voluptas facere? Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, quis vel, nam eum eos voluptatem veritatis facere deserunt magni suscipit pariatur ut nihil, sunt eius commodi ipsam quos doloremque in.</p>
+
+       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque reprehenderit aut quibusdam qui in esse voluptate distinctio exercitationem ipsum sequi id omnis quae, hic error eius voluptatum, sapiente quod ab! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem aperiam tenetur inventore esse distinctio reiciendis, impedit odio pariatur incidunt nulla consectetur, eum in quod ducimus illo nam quisquam! Maiores, repellat! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis ducimus quibusdam provident reprehenderit vero neque accusantium ex, velit veritatis dolores inventore rerum, dolorum quidem! Excepturi ipsa corporis voluptatum beatae quam!</p>
+
+       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque reprehenderit aut quibusdam qui in esse voluptate distinctio exercitationem ipsum sequi id omnis quae, hic error eius voluptatum, sapiente quod ab! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem aperiam tenetur inventore esse distinctio reiciendis, impedit odio pariatur incidunt nulla consectetur, eum in quod ducimus illo nam quisquam! Maiores, repellat! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis ducimus quibusdam provident reprehenderit vero neque accusantium ex, velit veritatis dolores inventore rerum, dolorum quidem! Excepturi ipsa corporis voluptatum beatae quam!</p>
    </main>
 </body>
 </html>
