--- a/desafio12/index.html
+++ b/desafio12/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto Cordel</title>
+    <title>Cordel Moderno</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,7 +21,8 @@
                 Antes que eu caduque <br>
                 Vou dizer tudo em poesia.</p>
         </section>
-        <section class="imagem1">
+
+        <section class="imagem">
             <p class="destaque1">Não é mais como era antes <br>
                 É tudo abreviado <br>
                 "Você" só tem duas letras <br>
@@ -30,6 +31,7 @@
                 Basta botar uma flor <br>
                 E um coração desenhado.</p>
         </section>
+
         <section class="normal">
             <p>Arroba agora não pesa <br>
                 É parte de um endereço <br>
@@ -38,6 +40,7 @@
                 Agora é .com <br>
                 Se o saite é muito bom <br>
                 Ele vale um alto preço.</p>
+
             <p>Pra piorar a liguagem <br>
                 O emoticom é um risco <br>
                 Tem símbolo para tudo <br>
@@ -46,31 +49,33 @@
                 Pra entender como fica <br>
                 Decifre esse rabisco.</p>
         </section>
-        <section class="imagem2">
-            <p class="destaque1">Tenho saudade das cartas<br>
-                Escritas com a própria mão<br>
-                Mandava no mês de Junho<br>
-                Só chegava no Verão<br>
-                Mas matava a saudade<br>
-                Era texto de verdade<br>
+
+        <section class="imagem">
+            <p class="destaque1">Tenho saudade das cartas <br>
+                Escritas com a própria mão <br>
+                Mandava no mês de Junho <br>
+                Só chegava no Verão <br>
+                Mas matava a saudade <br>
+                Era texto de verdade <br>
                 Nas linhas do coração.</p>
         </section>
+
         <section class="normal">
-            <p>Agora, escrevo e envio<br>
-                Chegando na mesma hora<br>
-                Mas quando vou prosear<br>
-                A pessoa foi embora<br>
-                Abriu outro aplicativo<br>
-                O mundo ficou cativo<br>
+            <p>Agora, escrevo e envio  <br>
+                Chegando na mesma hora <br>
+                Mas quando vou prosear <br>
+                A pessoa foi embora <br>
+                Abriu outro aplicativo <br>
+                O mundo ficou cativo <br>
                 Da tecnologia do agora.</p>
                 <br>
 
-            <p>Felizmente, pra orar<br>
-                Não precisa de internet<br>
-                Deus escuta todo mundo<br>
-                Se quiser, faça esse teste<br>
-                Dois pontos são dois joelhos<br>
-                Seus lábios são aparelhos<br>
+            <p>Felizmente, pra orar <br>
+                Não precisa de internet <br>
+                Deus escuta todo mundo <br>
+                Se quiser, faça esse teste <br>
+                Dois pontos são dois joelhos <br>
+                Seus lábios são aparelhos <br>
                 Deixe que Deus interprete.</p>
         </section>
     </main>
