--- a/desafio12/index.html
+++ b/desafio12/index.html
@@ -22,8 +22,8 @@
                 Vou dizer tudo em poesia.</p>
         </section>
 
-        <section class="imagem">
-            <p class="destaque1">Não é mais como era antes <br>
+        <section class="imagem" id="img01">
+            <p>Não é mais como era antes <br>
                 É tudo abreviado <br>
                 "Você" só tem duas letras <br>
                 O "O" e o "E" foi riscado <br>
@@ -50,8 +50,8 @@
                 Decifre esse rabisco.</p>
         </section>
 
-        <section class="imagem">
-            <p class="destaque1">Tenho saudade das cartas <br>
+        <section class="imagem" id="img02">
+            <p>Tenho saudade das cartas <br>
                 Escritas com a própria mão <br>
                 Mandava no mês de Junho <br>
                 Só chegava no Verão <br>
