--- a/ex025/form007.html
+++ b/ex025/form007.html
@@ -10,15 +10,44 @@
     <form action="cadastro.php" method="post" autocomplete="on">
 
         <p>
-            <label for="ifoto">Foto do perfil:</label>
-            <input type="file" name="foto" id="ifoto">
+            <label for="iestado">Estado</label>
+            <select name="estado" id="iestado">
+
+            <option value="" selected>--- Escolha ---</option>
+                <optgroup label="Região Sudeste">
+                <option value="MG">Minas Gerais</option>
+                <option value="RG">Rio de Janeiro</option>
+                <option value="SP">São Paulo</option>
+            </optgroup>
+
+            <optgroup label="Região Nordeste">
+                <option value="MA">Maranhão</option>
+                <option value="PE">Pernambuco</option>
+                <option value="RN">Rio Grande do Norte</option>
+            </optgroup>
+    </select>
+</p>
+
+        <p>
+            <label for="iprof">Profissão: </label>
+            <input type="text" name="prof" id="iprof" list="listprof">
+            <datalist id="listprof">
+                <option>Dentista</option>
+                <option>Médico</option>
+                <option>Veterinário</option>
+                <option>Professor</option>
+            </datalist>
+        </p>
+
+        <p>
+            <label for="imens">Mensagem:</label> <br>
+            <textarea name="mens" id="imens" cols="30" rows="10" placeholder="Digite sua mensagem"></textarea>
         </p>
 
         <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar Dados">
         </p>
-
     </form>
 </body>
 </html>
